Style for attendee page Fixed hamburger menu position on mobile Fixed feature image wide over than screen on mobile Increase button font size

--- a/wc-bangkok-2019/css/wcbkk-2019.css
+++ b/wc-bangkok-2019/css/wcbkk-2019.css
@@ -261,6 +261,51 @@ th.tix-column-price, th.tix-column-remaining, th.tix-column-quantity, th.tix-col
   }
 }
 
+/* ORGANIZER
+---------------------------------------*/
+#tix-attendees {
+  padding-top: 30px;
+}
+
+#tix-attendees .avatar {
+  border: 1px solid #104b8c;
+  border-radius: 3px;
+}
+
+#tix-attendees .tix-field {
+  margin-left: 60px;
+}
+
+#tix-attendees .tix-attendee-name > * {
+  color: #104b8c;
+  font-size: .9em;
+}
+
+@media only screen and (max-width: 1024px) {
+  #tix-attendees {
+    padding-top: 20px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  #tix-attendees {
+    padding-top: 10px;
+  }
+  #tix-attendees .tix-columns-3 {
+    text-align: center;
+  }
+  #tix-attendees .tix-columns-3 li {
+    height: 120px;
+    width: 50%;
+  }
+  #tix-attendees .tix-columns-3 .avatar {
+    float: none;
+  }
+  #tix-attendees .tix-columns-3 .tix-field {
+    margin-left: 0;
+  }
+}
+
 /* SPONSORS
 ---------------------------------------*/
 .wcb_widget_sponsors {
@@ -310,7 +355,6 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
 
 button:hover, button:focus, html input[type="button"]:hover, html input[type="button"]:focus, input[type="reset"]:hover, input[type="reset"]:focus, input[type="submit"]:hover, input[type="submit"]:focus {
   background-color: #ea8c70;
-  color: #FFF;
   background-image: none;
   outline: none;
 }
@@ -372,8 +416,7 @@ select:focus {
   position: absolute;
   top: 60%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   width: 25%;
 }
 
@@ -438,8 +481,7 @@ select:focus {
     left: 50%;
     top: 30px;
     width: 50%;
-    -webkit-transform: translate(-50%, 0);
-            transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
   }
   .site-description {
     font-size: 1em;
@@ -452,8 +494,7 @@ select:focus {
   .home .site-header hgroup {
     top: 46%;
     width: 65%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
   }
   .home .site-description {
     font-size: .8em;
@@ -558,14 +599,14 @@ select:focus {
   height: 50px;
   width: 50px;
   position: absolute;
+  top: 10px;
   text-align: center;
 }
 
 .menu-toggle.toggled-on,
 .menu-toggle.toggled-on:hover,
 .menu-toggle.toggled-on:focus {
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .menu-toggle.toggled-on::after,
@@ -688,13 +729,19 @@ select:focus {
 }
 
 .entry-content .alignwide {
-  margin-left: -100px;
-  margin-right: -100px;
+  margin-left: -5%;
+  margin-right: -5%;
   max-width: 1024px;
 }
 
 .entry-content .wp-block-button.aligncenter {
   margin-bottom: 1.5em;
+}
+
+.entry-content .wp-block-button__link {
+  font-size: 2em;
+  font-weight: 600;
+  padding: 15px 35px;
 }
 
 .hentry {
@@ -740,7 +787,7 @@ select:focus {
 
 @media only screen and (max-width: 768px) {
   .site-content {
-    width: 80%;
+    width: 90%;
     max-width: 100%;
   }
   .entry-title {
@@ -854,18 +901,6 @@ select:focus {
 #subscribe-email input[type=email] {
   background-color: transparent;
   border: 1px solid #FFF;
-  color: #FFF;
-}
-
-#subscribe-email input[type=email]::-webkit-input-placeholder {
-  color: #FFF;
-}
-
-#subscribe-email input[type=email]:-ms-input-placeholder {
-  color: #FFF;
-}
-
-#subscribe-email input[type=email]::-ms-input-placeholder {
   color: #FFF;
 }
 
