--- a/wc-bangkok-2019/sass/_navigation.scss
+++ b/wc-bangkok-2019/sass/_navigation.scss
@@ -96,6 +96,7 @@
 		font-size: 2.6em;
 		@include wh(50px, 50px);
 		position: absolute;
+		top: 10px;
 		text-align: center;
 	}
 }
